# svc/home-api/src/main/java/com/breathinghouse/homeapi/sensors/SensorController.java
@@ -2,16 +2,22 @@ package com.breathinghouse.homeapi.sensors;
 
 import jakarta.validation.Valid;
 import jakarta.validation.constraints.NotBlank;
+import org.springframework.http.HttpStatus;
 import org.springframework.http.MediaType;
+import org.springframework.http.ResponseEntity;
 import org.springframework.validation.annotation.Validated;
 import org.springframework.web.bind.annotation.DeleteMapping;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PatchMapping;
 import org.springframework.web.bind.annotation.PathVariable;
+import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.PutMapping;
 import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RequestMapping;
+import org.springframework.web.bind.annotation.ResponseStatus;
 import org.springframework.web.bind.annotation.RestController;
+
+import java.net.URI;
 
 @RestController
 @RequestMapping(path = "/api/v1", produces = MediaType.APPLICATION_JSON_VALUE)
@@ -29,9 +35,27 @@ public class SensorController {
         return new SensorsResponse(sensorService.listSensors());
     }
 
+    @PostMapping(path = "/sensors", consumes = MediaType.APPLICATION_JSON_VALUE)
+    public ResponseEntity<SensorSummary> pairSensor(@Valid @RequestBody PairSensorRequest request) {
+        PairResult result = sensorService.pair(request.requireSensorId(), request.displayNameOrNull());
+        if (result.created()) {
+            return ResponseEntity
+                    .status(HttpStatus.CREATED)
+                    .location(URI.create("/api/v1/sensors/" + result.sensor().sensorId()))
+                    .body(result.sensor());
+        }
+        return ResponseEntity.ok(result.sensor());
+    }
+
     @GetMapping("/sensors/{sensorId}")
     public SensorSummary getSensor(@PathVariable @NotBlank String sensorId) {
         return sensorService.getSensor(sensorId);
+    }
+
+    @DeleteMapping("/sensors/{sensorId}")
+    @ResponseStatus(HttpStatus.NO_CONTENT)
+    public void unpairSensor(@PathVariable @NotBlank String sensorId) {
+        sensorService.unpair(sensorId);
     }
 
     @PatchMapping(path = "/sensors/{sensorId}", consumes = MediaType.APPLICATION_JSON_VALUE)
